--- a/src/pages/homepage/index.scss
+++ b/src/pages/homepage/index.scss
@@ -159,13 +159,17 @@
 /*中间banner*/
 .middle_banner{
     width: 100%;
-    height: 660px;
     margin-bottom: 100px;
     &_img{
         margin-bottom: 70px;
+        width: 100%;
+        height: 450px;
+        background: url('../../../public/images/productions/banner1.jpg') no-repeat center;
+        background-size: 100% 100%;
     }
     &_box{
         width: 100%;
+        height: 200px;
         display: flex;
         justify-content: center;
     }
@@ -218,18 +222,27 @@
 
 /*公司简介*/
 .baseInfo{
-    height: 540px;
     width: 100%;
     margin :0 auto;
     background: #F7F8FA;
+    padding: 50px 0;
     &_main{
         width: 65%;
         height: 100%;
         margin:0 auto;
         display: flex;
+        justify-content: center;
         align-items: center;
     }
+    .baseInfo_img{
+        width: 600px;
+        height: 406px;
+        background:url('../../../public/images/productions/plant3.jpg') no-repeat center;
+        background-size: 100% 100%;
+    }
     &_box{
+        width: 50%;
+        height: 300px;
         margin-left: 100px;
     }
     .baseInfo_title{
