--- a/src/pages/35detail/index.scss
+++ b/src/pages/35detail/index.scss
@@ -21,7 +21,7 @@
     .detail_img{
         width: 800px;
         height: 500px;
-        background:url('../../../public/images/productions/p_hzs35_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs35_1.JPG') no-repeat center;
         background-size: 100% 100%;
     }
     .detail_info{
@@ -80,27 +80,27 @@ margin-bottom: 20px;
             height: 178px;
         }
         .pic_1{
-            background: url('../../../public/images/productions/d_35_1.jpg') no-repeat center;
+            background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/d_35_1.jpg') no-repeat center;
             background-size: 100% 100%;
         }
         .pic_2{
-            background: url('../../../public/images/productions/d_35_2.jpg') no-repeat center;
+            background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/d_35_2.jpg') no-repeat center;
             background-size: 100% 100%;
         }
         .pic_3{
-            background: url('../../../public/images/productions/d_35_3.jpg') no-repeat center;
+            background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/d_35_3.jpg') no-repeat center;
             background-size: 100% 100%;
         }
         .pic_4{
-            background: url('../../../public/images/productions/d_35_4.jpg') no-repeat center;
+            background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/d_35_4.jpg') no-repeat center;
             background-size: 100% 100%;
         }
         .pic_5{
-            background: url('../../../public/images/productions/d_35_5.jpg') no-repeat center;
+            background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/d_35_5.jpg') no-repeat center;
             background-size: 100% 100%;
         }
         .pic_6{
-            background: url('../../../public/images/productions/d_35_6.jpg') no-repeat center;
+            background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/d_35_6.jpg') no-repeat center;
             background-size: 100% 100%;
         }
         .words{
@@ -122,7 +122,7 @@ margin-bottom: 20px;
     border:1px solid #666;
     width: 100%;
     height: 800px;
-    background: url('../../../public/images/productions/35_table.jpg') no-repeat center;
+    background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/35_table.jpg') no-repeat center;
     background-size: 100% 100%;
     margin-bottom: 10px;
 }
@@ -150,11 +150,11 @@ margin-bottom: 20px;
         margin-bottom: 15px;
     }
     .case_list_item_one{
-        background: url('../../../public/images/productions/dc_35_1.jpg') no-repeat center;
+        background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/dc_35_1.jpg') no-repeat center;
         background-size: 100% 100%;
     }
     .case_list_item_two{
-        background: url('../../../public/images/productions/dc_35_2.jpg') no-repeat center;
+        background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/dc_35_2.jpg') no-repeat center;
         background-size: 100% 100%;
     }
 }
