--- a/src/pages/blender/index.scss
+++ b/src/pages/blender/index.scss
@@ -17,7 +17,7 @@
 .content-body .bigimg-box .img{
   width: 100%;
   height: 100%;
-  background: url('../../../public/images/productions/plant3.jpg') no-repeat center;
+  background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/aboutus-banner') no-repeat center;
   background-size: 100% 100%;
   position: absolute;
   animation: sizechange 1.5s;
@@ -103,27 +103,27 @@
         height: 300px; 
       }
       .box_1{
-        background:url('../../../public/images/productions/p_js500_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_js500_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_2{
-        background:url('../../../public/images/productions/p_js750_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_js750_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_3{
-        background:url('../../../public/images/productions/p_js1000_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_js1000_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_4{
-        background:url('../../../public/images/productions/p_js1500_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_js1500_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_5{
-        background:url('../../../public/images/productions/p_js2000_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_js2000_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_6{
-        background:url('../../../public/images/productions/p_js3000_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_js3000_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
     }
