--- a/src/pages/homepage/index.scss
+++ b/src/pages/homepage/index.scss
@@ -164,7 +164,7 @@
         margin-bottom: 70px;
         width: 100%;
         height: 450px;
-        background: url('../../../public/images/productions/banner1.jpg') no-repeat center;
+        background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/banner1.jpg') no-repeat center;
         background-size: 100% 100%;
     }
     &_box{
@@ -237,7 +237,7 @@
     .baseInfo_img{
         width: 600px;
         height: 406px;
-        background:url('../../../public/images/productions/plant3.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/aboutus-banner') no-repeat center;
         background-size: 100% 100%;
     }
     &_box{
