--- a/src/pages/mixingplant/index.scss
+++ b/src/pages/mixingplant/index.scss
@@ -17,7 +17,7 @@
 .content-body .bigimg-box .img{
   width: 100%;
   height: 100%;
-  background: url('../../../public/images/productions/plant3.jpg') no-repeat center;
+  background: url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/aboutus-banner') no-repeat center;
   background-size: 100% 100%;
   position: absolute;
   animation: sizechange 1.5s;
@@ -103,39 +103,39 @@
         height: 300px; 
       }
       .box_1{
-        background:url('../../../public/images/productions/p_hzs35_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs35_1.JPG') no-repeat center;
         background-size: 100% 100%;
       }
       .box_2{
-        background:url('../../../public/images/productions/p_hzs50_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs50_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_3{
-        background:url('../../../public/images/productions/p_hzs60_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs60_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_4{
-        background:url('../../../public/images/productions/p_hzs75_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs75_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_5{
-        background:url('../../../public/images/productions/p_hzs90_1.png') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs90_1.png') no-repeat center;
         background-size: 100% 100%;
       }
       .box_6{
-        background:url('../../../public/images/productions/p_hzs120_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs120_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_7{
-        background:url('../../../public/images/productions/p_hzs180_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs180_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_8{
-        background:url('../../../public/images/productions/p_hzs240_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs240_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
       .box_9{
-        background:url('../../../public/images/productions/p_hzs270_1.jpg') no-repeat center;
+        background:url('https://mengkeyao-dev.oss-cn-hongkong.aliyuncs.com/p_hzs270_1.jpg') no-repeat center;
         background-size: 100% 100%;
       }
     }
